--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,22 @@ DATABASE_URL = ""
 DB_SINGLETON_ENABLED = "true"
 DB_MAX_CONNECTIONS = "1"
 
+# PostgreSQL Schema Configuration (Multi-Project Support)
+# Use custom schema to isolate tables when sharing one database across multiple projects
+# - Leave empty or 'public' for single project (uses default public schema)
+# - Set to custom name (e.g., 'coloring', 'web') for multi-project setup
+# Example: DB_SCHEMA="coloring" will create all tables in "coloring" schema
+DB_SCHEMA = "public"
+
+# Drizzle Migrations Configuration (Multi-Project Support)
+# Custom migrations table to avoid conflicts when sharing database
+# Example: For 'coloring' project, use '__drizzle_migrations_coloring'
+DB_MIGRATIONS_TABLE = "__drizzle_migrations"
+
+# Migrations schema (where Drizzle stores migration journal)
+# Keep as 'drizzle' or use 'public' if your Supabase project doesn't have 'drizzle' schema
+DB_MIGRATIONS_SCHEMA = "drizzle"
+
 # auth secret
 # openssl rand -base64 32
 AUTH_SECRET = ""
