--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "i18n-ally.localesPaths": ["src/config/locale/messages"],
-  "i18n-ally.keystyle": "nested"
+  "python.terminal.useEnvFile": true
 }
