解决依赖冲突

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,85 @@
-# app
-NEXT_PUBLIC_APP_URL = "http://coloringpages.club"
+# ============================================
+# Application Configuration
+# ============================================
+NEXT_PUBLIC_APP_URL = "http://localhost:3000"
 NEXT_PUBLIC_APP_NAME = "Coloring Pages"
+NEXT_PUBLIC_SITE_URL = "http://localhost:3000"
 
-# theme
+# ============================================
+# Theme & Appearance
+# ============================================
 NEXT_PUBLIC_THEME = "default"
-
-# appearance
 NEXT_PUBLIC_APPEARANCE = "system"
 
-# database
+# ============================================
+# Database (Supabase PostgreSQL)
+# ============================================
 DATABASE_PROVIDER = "postgresql"
-DATABASE_URL = ""
+DATABASE_URL = ""  # Format: postgresql://user:pass@host:port/db
 DB_SINGLETON_ENABLED = "true"
 DB_MAX_CONNECTIONS = "1"
-
-# PostgreSQL Schema Configuration (Multi-Project Support)
-# Use custom schema to isolate tables when sharing one database across multiple projects
-# - Leave empty or 'public' for single project (uses default public schema)
-# - Set to custom name (e.g., 'coloring', 'web') for multi-project setup
-# Example: DB_SCHEMA="coloring" will create all tables in "coloring" schema
 DB_SCHEMA = "public"
-
-# Drizzle Migrations Configuration (Multi-Project Support)
-# Custom migrations table to avoid conflicts when sharing database
-# Example: For 'coloring' project, use '__drizzle_migrations_coloring'
 DB_MIGRATIONS_TABLE = "__drizzle_migrations"
-
-# Migrations schema (where Drizzle stores migration journal)
-# Keep as 'drizzle' or use 'public' if your Supabase project doesn't have 'drizzle' schema
 DB_MIGRATIONS_SCHEMA = "drizzle"
 
-# auth secret
-# openssl rand -base64 32
-AUTH_SECRET = ""
+# ============================================
+# Authentication
+# ============================================
+AUTH_URL = "http://localhost:3000"
+AUTH_SECRET = ""  # Generate: openssl rand -base64 32
+
+# ============================================
+# AI Services
+# ============================================
+# Replicate API for AI image generation
+REPLICATE_API_TOKEN = ""
+
+# Hugging Face API
+HF_TOKEN = ""
+
+# DeepSeek API
+DEEPSEEK_API = ""
+
+# ============================================
+# Cloudflare R2 Storage
+# ============================================
+CF_R2_ACCOUNT_ID = ""
+CF_R2_TOKEN = ""
+R2_ACCESS_KEY_ID = ""
+R2_SECRET_ACCESS_KEY = ""
+R2_PUBLIC_DOMAIN = "https://images.yourdomain.com"
+R2_DOMAIN = "https://images.yourdomain.com"
+R2_BUCKET_NAME = "your-bucket-name"
+
+# ============================================
+# Cloudflare API
+# ============================================
+CLOUDFLARE_API_TOKEN = ""
+
+# ============================================
+# Kaggle Configuration
+# ============================================
+KAGGLE_USERNAME = ""
+KAGGLE_KEY = ""
+KAGGLE_NOTEBOOK_SLUG = ""
+KAGGLE_NOTEBOOK_VERSION = ""
+
+# ============================================
+# Coloring Workflow Configuration
+# ============================================
+COLORING_WORKFLOW_ENABLED = true
+COLORING_WORKFLOW_SCHEDULE_TIME = 02:00
+COLORING_WORKFLOW_MAX_DAILY = 100
+COLORING_MDX_PATH = content/coloring-pages
+COLORING_R2_PATH = coloring-pages
+
+# ============================================
+# Image Quality Settings
+# ============================================
+COLORING_MIN_IMAGE_WIDTH = 512
+COLORING_MAX_IMAGE_WIDTH = 4096
+COLORING_MIN_IMAGE_SIZE = 10240
+COLORING_MAX_IMAGE_SIZE = 5242880
+COLORING_MIN_QUALITY_SCORE = 70
+COLORING_USE_AI_VALIDATION = true
+COLORING_AI_VALIDATION_MODEL = openai
