--- a/package.json
+++ b/package.json
@@ -103,9 +103,9 @@
     "motion": "^12.23.12",
     "mysql2": "^3.16.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "next-intl": "^4.3.4",
-    "next-mdx-remote": "^5.0.0",
+    "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "node-cron": "^3.0.3",
@@ -120,17 +120,17 @@
     "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
     "rehype-autolink-headings": "^7.1.0",
-    "sharp": "^0.33.5",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "replicate": "^1.3.1",
     "resend": "^6.0.3",
     "rough-notation": "^0.5.1",
+    "sharp": "^0.33.5",
     "simple-flakeid": "^0.0.5",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "stripe": "^18.5.0",
-    "swiper": "^12.0.1",
+    "swiper": "^12.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-stick-to-bottom": "^1.1.1",
